

** 0.1.x **
  - Multiplayer battle screen
  - Multiplayer world map
  - Social buttons
  - 'Channels' for town/world view
  - Instancing on dungeons?  Or perhaps on chests
  - Add 'challenges' to the battlescreen in place of the button



** 0.0.x **
	- Refactor css
	- Could the battle screen render different on a phone?
  - Get cannedwebview onto my mobile and do some tests to see where things
are... android dev was on a win PC...
	- test ahoy
	- Consider porting to padrino... check status of websockets and sinatra
	first
  - use fastly as a CDN
  - Pull out javascript handles from the HTML to be setup from within javascript from within initialize_game.js
  - Consider using backbone js and handling game logic inside the app!!!
  - Just 'start' the world map view... shared with dungeon view... shared with tow view...
    Desires:
    * Multiplayer fun... so... 
      > enemy mobs are visible (and appear)
      > 'movement tiles' are small, or non tile based
      > has mini-map/ radar
    * iPad fun... so...
      > tapping/ mouse click native
      > Has auto travel

  - Setup PhatomJS unit tests

CURRENT TASK:

  - Make javascript using modulejs and put it into a bower pacakge


COMPLETE:
  - Fixed browser compatibility issue by hacking the font
  - BugFix:  removed the now pointless edge conditionals webkitRequestAnimationFrame
	- BugFix:  Behavor with font differed one Windows 7, Firefox 37.0.1, solved
	by explicitly declaring div and li heights without ill effect.  


** 0.0.1 **
  Early work...

  - Got javascript classes
  - Title screen
  - Battle screen
  - Some animations
  
  